--- a/crm-fontanero-frontend/.vscode/settings.json
+++ b/crm-fontanero-frontend/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
-  "prettier.singleQuote": true,
-  "prettier.trailingComma": "all"
+  "eslint.format.enable": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": "explicit"
+  }
 }
