preparada visa login y la del menu habra que retocar

--- a/crm-fontanero-frontend/.vscode/settings.json
+++ b/crm-fontanero-frontend/.vscode/settings.json
@@ -4,5 +4,10 @@
   "eslint.format.enable": false,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
-  }
+  },
+  "tailwindCSS.includeLanguages": {
+    "typescript": "html",
+    "javascript": "html"
+  },
+  "tailwindCSS.emmetCompletions": true
 }
