fixeado el tema de login rutas y duplicidad dashboard

--- a/crm-fontanero-frontend/angular.json
+++ b/crm-fontanero-frontend/angular.json
@@ -2,7 +2,8 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "npm"
+    "packageManager": "npm",
+    "analytics": "9eb7f2ae-08ab-4fed-8a75-07ae2772e813"
   },
   "newProjectRoot": "projects",
   "projects": {
