--- a/crm-fontanero-frontend/package.json
+++ b/crm-fontanero-frontend/package.json
@@ -34,6 +34,9 @@
     "@angular/platform-server": "^21.1.0",
     "@angular/router": "^21.1.0",
     "@angular/ssr": "^21.1.2",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "bson": "^7.2.0",
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
