--- a/crm-fontanero-frontend/package.json
+++ b/crm-fontanero-frontend/package.json
@@ -40,6 +40,7 @@
     "express": "^5.1.0",
     "moment": "^2.30.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.26.18",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
